@@ -192,11 +192,8 @@ namespace SimpleInjector.Extensions.LifetimeScoping
             {
                 // Dispose all instances in the opposite order in which they are created. This prevents
                 // prevents ObjectDisposedExceptions from being thrown when dependent services are called
-                // from within the Dispoe method.
-                for (int index = this.disposables.Count - 1; index >= 0; index--)
-                {
-                    this.disposables[index].Dispose();
-                }
+                // from within the Dispose method.
+                LifetimeScopeLifestyle.DisposeInstances(this.disposables);
 
                 this.disposables = null;
             }
