@@ -195,14 +195,11 @@ namespace SimpleInjector.Integration.Wcf
             {
                 // Dispose all instances in the opposite order in which they are created. This prevents
                 // prevents ObjectDisposedExceptions from being thrown when dependent services are called
-                // from within the Dispoe method.
-                for (int index = this.disposables.Count - 1; index >= 0; index--)
-                {
-                    this.disposables[index].Dispose();
-                }
-            }
+                // from within the Dispose method.
+                WcfOperationLifestyle.DisposeInstances(this.disposables);
 
-            this.disposables = null;
+                this.disposables = null;
+            }            
         }
 
         private sealed class ReferenceEqualityComparer<T> : IEqualityComparer<T> where T : class
